my profile page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="container">
     <div class="card-white">
     <h1>Hello, I'm Ayaka!</h1>
-    <img src="../profile/images/ayakaprofile.jpg" alt="Ayaka profile" class="img-circle">
+    <img src="profile/images/ayakaprofile.jpg" alt="Ayaka profile" class="img-circle">
     <p>I really want to go on an overseas trip anyway...✈️</p>
     <h3>Traveling🧳 Scuba diving🐬, Cooking🍳, Exercise🏋</h3>
     <a href="#" class="btn-blue">Hope this button takes me somewhere</a></div>
