--- a/index.html
+++ b/index.html
@@ -12,37 +12,36 @@
   <div id="container">
     <div class="card-white">
     <h1>Hello, I'm Ayaka!</h1>
-    <img src="profile/images/ayakaprofile.jpg" alt="Ayaka profile" class="img-circle">
+    <img src="../profile/images/ayakaprofile.jpg" alt="Ayaka profile" class="img-circle">
     <p>I really want to go on an overseas trip anyway...✈️</p>
     <h3>Traveling🧳 Scuba diving🐬, Cooking🍳, Exercise🏋</h3>
     <a href="#" class="btn-blue">Hope this button takes me somewhere</a></div>
 
     <div class="card-white">
-    <h2>Traveling makes me excited</h2>
+    <h2>Traveling makes me exciting</h2>
     Visit places, meet a lot of people...
     </div>
 
     <div class="card-white">
-    <h2>Scuva diving takes me somewhere to another world</h2>
+    <h2>Scuva diving takes me somewhere an another world</h2>
     I can feel I become Mermaid🧜‍♀️
     </div>
 
     <div class="card-white">
-    <h2>Follow me</h2>
-    <ul class="list-inline">
+    <ul>
       <li>
-        <a href="#" target="_blank">
-          <i class="fab fa-facebook-f"></i>
+        <a href="#">
+          <i class="fab fa-facebook-f"></i> Facebook
         </a>
       </li>
       <li>
         <a href="#">
-          <i class="fab fa-linkedin-in" target="_blank"></i>
+          <i class="fab fa-linkedin-in"></i> Linkedin
         </a>
       </li>
       <li>
         <a href="#">
-          <i class="fab fa-twitter" target="_blank"></i>
+          <i class="fab fa-twitter"></i> Twitter
         </a>
       </li>
     </ul>
