--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="#" class="btn-blue">Hope this button takes me somewhere</a></div>
 
     <div class="card-white">
-    <h2>Traveling makes me exciting</h2>
+    <h2>Traveling makes me excited</h2>
     Visit places, meet a lot of people...
     </div>
 
